--- a/Teaching/LapMesh/index.html
+++ b/Teaching/LapMesh/index.html
@@ -415,7 +415,7 @@
 
                                     <h2><u><a name = "download">Download Executable (Windows 7 64 bit only)</a></u></h2>
 
-                                    <a href = "https://drive.google.com/file/d/103pajg_8oXI_zh1wSNbA1b4iCRqPaLdf/view?usp=sharing">Click here</a> to download the executable file.  Parameters are as described in the usage section, and many examples are given in the text.  To choose anchors in the GUI, hold down CTRL and drag a vertex away from its original position.  Once all anchors are chosen, hit SPACE to update the mesh.
+                                    <a href = "lap.exe">Click here</a> to download the executable file.  Parameters are as described in the usage section, and many examples are given in the text.  To choose anchors in the GUI, hold down CTRL and drag a vertex away from its original position.  Once all anchors are chosen, hit SPACE to update the mesh.
 
                                     <BR><BR>
 
