improving research layout

--- a/Research/index.html
+++ b/Research/index.html
@@ -53,7 +53,7 @@
 
 									<div class="row 200%">
 										<div class="6u 12u$(medium)">
-											<img src = "TopoHyperparameterOpt/RidgeCoeffs.svg" width=400>
+											<img src = "TopoHyperparameterOpt/RidgeCoeffs.svg" width=300>
 										</div>
 										<div class="6u 12u$(medium)">
 													<h4><a href = "TopoHyperparameterOpt/mottatralie2019_optimizing_topological_features.pdf">Hyperparameter Optimization of Topological Features for Machine Learning Applications</a></b>. <u><a href = "http://www.math.fau.edu/people/faculty/francis_motta.php">Francis Motta</a>, <a href = "http://www.ctralie.com">Christopher J. Tralie</a></u>, et. al.  <a href = "https://www.icmla-conference.org/icmla19/docs/SS_TopologicalDataAnalysis.pdf">Special Session on Topological Data Analysis in Machine Learning, IEEE ICMLA-2019</a>, Boca Raton, Florida. </h4>
@@ -66,7 +66,7 @@
 
 									<div class="row 200%">
 										<div class="6u 12u$(medium)">
-											<img src = "Datacos.png">
+											<img src = "Datacos.png" width="300">
 										</div>
 										<div class="6u 12u$(medium)">
 													<h4><a href = "https://repositori.upf.edu/bitstream/handle/10230/42771/yesiler_ismir19_datacos.pdf?sequence=1&isAllowed=y">Da-TACOS: a dataset for cover song identification and understanding</a></b>. <u><a href = "https://scholar.google.com/citations?user=5zDk0yIAAAAJ&hl=en">Furkan Yesiler</a>, <a href = "http://www.ctralie.com">Christopher J. Tralie</a></u>, <a href = "https://albincorreya.github.io/">Albin Correya</a>, <a href = "https://dl.acm.org/profile/87059755857">Diego F. Silva</a>, <a href = "https://philtgun.me/">Philip Tovstogan</a>, <a href = "https://emiliagomez.com/">Emilia Gomez</a>, <a href = "https://www.upf.edu/web/xavier-serra">Xavier Serra</a>.  <a href = "https://ismir2019.ewi.tudelft.nl/">20<SUP>th</SUP> International Society for Music Information Retrieval Conference</a>, 2020, Delft, The Netherlands. </h4>
@@ -81,7 +81,7 @@
 
 									<div class="row 200%">
 										<div class="6u 12u$(medium)">
-											<img src = "ScatteringSNFSSM/SSMScatteringExample.png">
+											<img src = "ScatteringSNFSSM/SSMScatteringExample.png" width="300">
 										</div>
 										<div class="6u 12u$(medium)">
 													<h4><a href = "SSMTW">Multi-scale Geometric Summaries
@@ -97,7 +97,7 @@
 									<p></p><p></p><p></p>
 									<div class="row 200%">
 										<div class="6u 12u$(medium)">
-											<img src = "TwistyTakens/KleinProj.png">
+											<img src = "TwistyTakens/KleinProj.png" width=300>
 										</div>
 										<div class="6u 12u$(medium)">
 													<h4><a href = "https://arxiv.org/abs/1809.07131">Twisty Takens: A Geometric Characterization of Good Observations on Dense Trajectories</a></b>.  <BR><a href = "https://math.berkeley.edu/people/grad/boyan-xu">Boyan Xu</a>, <u><a href = "http://www.ctralie.com">Christopher J. Tralie</a></u>, Alice Antia, Michael Lin, <a href = "https://cmse.msu.edu/directory/faculty/jose-perea/">Jose A. Perea</a><BR>
@@ -115,7 +115,7 @@
 									<p></p><p></p><p></p>
 									<div class="row 200%">
 										<div class="6u 12u$(medium)">
-											<img src = "StructureFusion_ICASSP/thumb.png">
+											<img src = "StructureFusion_ICASSP/thumb.png" width="300">
 										</div>
 										<div class="6u 12u$(medium)">
 											<h4><a href = "https://arxiv.org/pdf/1902.01023.pdf">"Enhanced Hierarchical Music Structure Annotations via Feature Level Similarity Fusion."</a></b><u><a href = "http://www.ctralie.com">Christopher J. Tralie</a></u>, <a href = "https://bmcfee.github.io/">Brian McFee</a>.<BR><a href = "https://2019.ieeeicassp.org/">International Conference on Acoustics, Speech, And Signal Processing (ICASSP), 2019, Brighton, UK</h4>
