--- a/Research/index.html
+++ b/Research/index.html
@@ -48,6 +48,38 @@
 									<p></p><p></p><p></p>
 										
 
+									<HR><h2>2020</h2>
+
+									<div class="row 200%">
+										<div class="6u 12u$(medium)">
+											<img src = "linmdtw/_static/logo.png" width=250>
+										</div>
+										<div class="6u 12u$(medium)">
+													<h4><a href = "linmdtw">Exact, parallelizable dynamic time warping alignment with linear memory</a></b>. <u>Elizabeth Dempsey, <a href = "http://www.ctralie.com">Christopher J. Tralie</a></u>, et. al.  <a href = "https://www.ismir2020.net/">Proceedings of the 21st Conference of the International Society for Music Information Retrieval (ISMIR 2020).</a> (Virtual)</h4>
+													<ul>
+													<li><a href = "linmdtw/paper.pdf">Paper</a></li>
+													<li><a href = "linmdtw">Software</a></li>
+													</ul>
+										</div>
+									</div>
+									<p></p><p></p><p></p>
+
+
+									<div class="row 200%">
+										<div class="6u 12u$(medium)">
+											<img src = "p53periodicity/DistributionPlots.svg" width=300>
+										</div>
+										<div class="6u 12u$(medium)">
+													<h4><a href = "TopoHyperparameterOpt/mottatralie2019_optimizing_topological_features.pdf">Periodicity Scoring of Time Series Encodes Dynamical Behavior of the Tumor Suppressor p53</a></b>. <u><a href = "http://www.math.ucsd.edu/~cmoosmueller/index.html">Caroline Moosm&#252;ller</a>, <a href = "http://www.ctralie.com">Christopher J. Tralie</a></u>, <a href = "https://mahdikooshkbaghi.gitlab.io/">Mahdi Kooshkbaghi</a>, <a href = "https://www2.le.ac.uk/departments/engineering/people/academic-staff/dr-zehor-belkhatir">Zehor Belkhatir</a>, <a href = "https://scholar.google.com/citations?user=2HqjMYwAAAAJ&hl=en">Maryam Pouryahya</a>, <a href = "https://ssqbiophd.hms.harvard.edu/faculty-staff/jose-reyes">Jos&#233; Reyes</a>, <a href = "https://www.mskcc.org/research-areas/labs/joseph-deasy">Joseph O. Deasy</a>, <a href = "https://www.cs.stonybrook.edu/people/faculty/AllenTannenbaum">Allen R. Tannenbaum</a>, <a href = "https://engineering.jhu.edu/chembe/faculty/yannis-kevrekidis/">Ioannis G. Kevrekidis</a>.  <a href = "https://mtns2020.eng.cam.ac.uk/">24th International Symposium on Mathematical Theory of Networks and Systems (MTNS 2020)</a>. </h4>
+													<ul>
+													<li><a href = "p53periodicity/moosmullertralie2020_p53periodicity.pdf">Paper</a></li>
+													<li><a href = "https://github.com/ctralie/p53">Code</a></li>
+													</ul>
+										</div>
+									</div>
+									<p></p><p></p><p></p>
+
+
 									<HR><h2>2019</h2>
 
 
