--- a/Teaching/ImageProcessing/index.html
+++ b/Teaching/ImageProcessing/index.html
@@ -464,6 +464,17 @@
 											<ul>
 												<li><a href="../../Research/index.html">Projects</a></li>
 												<li><a href = "../../Research/ctralie_dissertation.pdf">Dissertation</a></li>
+												<li>
+													<a href = "../../Research/GASPGroup">GASP Group @Ursinus</a>
+													<ul>
+														<li>
+															<a href = "../../Research/GASPGroup/index.html#students">Student Projects</a>
+														</li>
+														<li>
+															<a href = "../../Research/GASPGroup/index.html#consultants">Lab Consultants</a>
+														</li>
+													</ul>
+												</li>
 											</ul>
 										</li>
 										<li><a href="../../Software">Software</a></li>
