Linking to my courses for the fall

--- a/Research/index.html
+++ b/Research/index.html
@@ -55,7 +55,7 @@
 											<img src = "linmdtw/_static/logo.png" width=250>
 										</div>
 										<div class="6u 12u$(medium)">
-													<h4><a href = "linmdtw">Exact, parallelizable dynamic time warping alignment with linear memory</a></b>. <u>Elizabeth Dempsey, <a href = "http://www.ctralie.com">Christopher J. Tralie</a></u>, et. al.  <a href = "https://www.ismir2020.net/">Proceedings of the 21st Conference of the International Society for Music Information Retrieval (ISMIR 2020).</a> (Virtual)</h4>
+													<h4><a href = "linmdtw">Exact, parallelizable dynamic time warping alignment with linear memory</a></b>. <u>Elizabeth Dempsey, <a href = "http://www.ctralie.com">Christopher J. Tralie</a></u>.  <a href = "https://www.ismir2020.net/">Proceedings of the 21st Conference of the International Society for Music Information Retrieval (ISMIR 2020).</a> (Virtual)</h4>
 													<ul>
 													<li><a href = "linmdtw/paper.pdf">Paper</a></li>
 													<li><a href = "linmdtw">Software</a></li>
