--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -43,6 +43,12 @@
 										<h1><a name = "classes">Classes</a></h1>
 									</header>
 
+									<h2>Fall 2021</h2>
+									<ul>
+										<li><h3><a href = "https://ursinus-cs373-f2021.github.io/CoursePage/">CS 373: Theory of Computation</a></h3></li>
+										<li><h3><a href = "https://ursinus-cs477-f2021.github.io/CoursePage/">CS 477: Artificial Intelligence And Machine Learning</a></h3></li>
+									</ul>
+
 									<h2>Spring 2021</h2>
 									<ul>
 										<li><h3><a href = "https://ursinus-cs371-s2021.github.io/CoursePage/">CS 371: Algorithms And Data Structures</a></h3></li>
