Adding Ronsard headshot

--- a/Research/GASPGroup/index.html
+++ b/Research/GASPGroup/index.html
@@ -97,6 +97,7 @@
 						<div class="row 200%">
 							<div class="4u 4u$(medium)">
 								<h3>Ronsard Malonda</h3>
+								<img src = "ronsard.png" width="140">
 
 							</div>
 							<div class="4u 4u$(medium)">
