Adding facejam link

--- a/Research/GASPGroup/index.html
+++ b/Research/GASPGroup/index.html
@@ -198,6 +198,9 @@
 							</div>
 							<div class="4u 4u$(medium)">
 								<h4>FaceJam Javascript/WebGL</h4>
+								<h4>
+									Web site: <a href = "http://www.facejam.app">http://www.facejam.app</a>
+								</h4>
 							</div>
 						</div>
 						<p></p><p></p><p></p>
