Adding zuri to the GASP group

--- a/Research/GASPGroup/index.html
+++ b/Research/GASPGroup/index.html
@@ -397,6 +397,25 @@
 
 						<div class="row 200%">
 							<div class="4u 4u$(medium)">
+								<h3>Zuri Srinivas</h3>
+								<img src = "zuri.jpg" width=250>
+							</div>
+							<div class="4u 4u$(medium)">
+
+								<p></p><p></p><p></p>
+								<h4>Areas of specialization</h4>
+								Adversarial Attacks
+
+								
+								<p></p><p></p><p></p>
+								
+								<h4>Administrative assistants</h4>
+								<a href = "https://sites.google.com/view/ssrinivas/about">Sadhwi Srinivas</a>, <a href = "https://jd-jones.github.io/">Jonathan Jones</a>
+							</div>
+						</div>
+
+						<div class="row 200%">
+							<div class="4u 4u$(medium)">
 								<h3>Ember LaBoda</h3>
 								<img src = "ember.png" width=250>
 							</div>
