Adding FaceJam stuff

--- a/Research/index.html
+++ b/Research/index.html
@@ -46,7 +46,24 @@
 									
 									Below are some selected academic projects I have worked on.  Please refer to my <a href = "ctralie_dissertation.pdf">dissertation</a> to see the spark of a lot of this work.
 									<p></p><p></p><p></p>
-										
+									<HR><h2>2021</h2>
+
+									<div class="row 200%">
+										<div class="6u 12u$(medium)">
+											<img src = "FaceJam/thumb.png" width=300>
+										</div>
+										<div class="6u 12u$(medium)">
+													<h4><a href = "https://www.facejam.app">www.facejam.app: Facial Expressions for Musical Expression</a></b>.  <u><a href = "http://www.ctralie.com">Christopher J. Tralie</a>, Parker Fairchild</u><BR><a href = "https://ismir2021.ismir.net/">22<SUP>nd</SUP> International Society for Music Information Retrieval Conference</a> Late Breaking Demo Session</a></h4>
+													<ul>
+													<li><a href = "https://www.facejam.app/">Live Demo</a></li>
+													<li><a href = "https://www.youtube.com/watch?v=VJhq7CXw_6A">Video Overview</a></li>
+													<li><a href = "FaceJam/ismir2021_facejam_paper_latebreaking_tralie_fairchild.pdf">Paper</a></li>
+													<li><a href = "FaceJam/ismir2021_facejam_poster_latebreaking_tralie_fairchild.pdf">Poster</a></li>
+													</ul>
+										</div>
+									</div>
+									<p></p><p></p><p></p>
+
 
 									<HR><h2>2020</h2>
 
