--- a/Research/GASPGroup/index.html
+++ b/Research/GASPGroup/index.html
@@ -201,6 +201,10 @@
 								<h4>
 									Web site: <a href = "http://www.facejam.app">http://www.facejam.app</a>
 								</h4>
+								<ul>
+									<li><a href = "https://www.youtube.com/watch?v=VJhq7CXw_6A">Overview Video</a></li>
+									<li><a href = "../FaceJam/ismir2021_facejam_paper_latebreaking_tralie_fairchild.pdf">Technical paper</a></li>
+								</ul>
 							</div>
 						</div>
 						<p></p><p></p><p></p>
