--- a/Research/index.html
+++ b/Research/index.html
@@ -50,7 +50,7 @@
 
 									<div class="row 200%">
 										<div class="6u 12u$(medium)">
-											<img src = "FaceJam/thumb.png" width=300>
+											<img src = "FaceJam/thumb.svg" width=300>
 										</div>
 										<div class="6u 12u$(medium)">
 													<h4><a href = "https://www.facejam.app">www.facejam.app: Facial Expressions for Musical Expression</a></b>.  <u><a href = "http://www.ctralie.com">Christopher J. Tralie</a>, Parker Fairchild</u><BR><a href = "https://ismir2021.ismir.net/">22<SUP>nd</SUP> International Society for Music Information Retrieval Conference</a> Late Breaking Demo Session</a></h4>
