even better picture/specialization for meowgi

--- a/Research/GASPGroup/index.html
+++ b/Research/GASPGroup/index.html
@@ -327,13 +327,13 @@
 						<div class="row 200%">
 							<div class="4u 4u$(medium)">
 								<h3>Mr. Meowgi</h3>
-								<img src = "mrmeowgi.jpg" width=250>
+								<img src = "mrmeowgi.png" width=250>
 							</div>
 							<div class="4u 4u$(medium)">
 
 								<p></p><p></p><p></p>
 								<h4>Areas of specialization</h4>
-								Path planning, packing problems
+								Path planning, autonomous vehicle engineering
 
 								
 								<p></p><p></p><p></p>
