Updating teaching schedule

--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -43,6 +43,13 @@
 										<h1><a name = "classes">Classes</a></h1>
 									</header>
 
+									<h2>Spring 2022</h2>
+									<ul>
+										<li><h3><a href = "https://ursinus-cs174-s2022.github.io/CoursePage/">CS 174: Object Oriented And Systems Programming</a></h3></li>
+										<li><h3><a href = "https://ursinus-cie200i-s2022.github.io/CoursePage/">CIE 200: Common Intellectual Experience</a></h3></li>
+										<li><h3><a href = "https://ursinus-cs371-s2022.github.io/CoursePage/">CS 371: Algorithms And Data Structures</a></h3></li>
+									</ul>
+
 									<h2>Fall 2021</h2>
 									<ul>
 										<li><h3><a href = "https://ursinus-cs373-f2021.github.io/CoursePage/">CS 373: Theory of Computation</a></h3></li>
