Updating linmdtw documentation to version 0.1.7

--- a/Research/GASPGroup/index.html
+++ b/Research/GASPGroup/index.html
@@ -234,7 +234,7 @@
 								<p></p><p></p><p></p>
 								<h4>Areas of specialization</h4>
 
-								Laser optics, target detection and tracking
+								Laser optics, target detection and tracking, debugging
 								<p></p><p></p><p></p>
 								
 								<h4>Administrative assistants</h4>
