--- a/Research/GASPGroup/index.html
+++ b/Research/GASPGroup/index.html
@@ -347,6 +347,26 @@
 
 						<div class="row 200%">
 							<div class="4u 4u$(medium)">
+								<h3>Artemis And Apollo Tralie</h3>
+								<img src = "artemisapollo.jpeg" width=250>
+							</div>
+							<div class="4u 4u$(medium)">
+
+								<p></p><p></p><p></p>
+								<h4>Areas of specialization</h4>
+								Astrophysical data analysis, astrobiology, plant dissection
+
+								
+								<p></p><p></p><p></p>
+								
+								<h4>Administrative assistants</h4>
+								<a href = "https://www.jamestralie.com/">James Tralie</a>
+							</div>
+						</div>
+
+
+						<div class="row 200%">
+							<div class="4u 4u$(medium)">
 								<h3>Teddi And Toby Litovsky</h3>
 								<img src = "TeddiToby.jpg" width=250>
 							</div>
