--- a/Research/GASPGroup/index.html
+++ b/Research/GASPGroup/index.html
@@ -488,7 +488,7 @@
 
 								<p></p><p></p><p></p>
 								<h4>Areas of specialization</h4>
-								Hyperbolic geometry (always finding space to hide)
+								Automated lump detection in 3D
 
 								
 								<p></p><p></p><p></p>
