--- a/Research/GASPGroup/index.html
+++ b/Research/GASPGroup/index.html
@@ -87,7 +87,7 @@
 							<div class="4u 4u$(medium)">
 								<h4>Ursinus Smokestack 3D Modeling And Annotation Interface</h4>
 								<ul>
-									<li><a href = "https://ctralie.github.io/UrsinusSmokestack3D/">Live demo</a></li>
+									<li><a href = "http://www.ucsmokestack.com">Live demo</a></li>
 								</ul>
 							</div>
 						</div>
