--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -43,6 +43,13 @@
 										<h1><a name = "classes">Classes</a></h1>
 									</header>
 
+									<h2>Fall 2022</h2>
+									<ul>
+										<li><h3><a href = "https://ursinus-cs174-f2022.github.io/CoursePage/">CS 174: Object Oriented And Systems Programming</a></h3></li>
+										<li><h3><a href = "https://ursinus-cs271-f2022.github.io/CoursePage/">CS 271: Algorithms And Data Structures</a></h3></li>
+										<li><h3><a href = "https://ursinus-cs476-f2022.github.io/CoursePage/">CS 476: Computer Graphics</a></h3></li>
+									</ul>
+
 									<h2>Spring 2022</h2>
 									<ul>
 										<li><h3><a href = "https://ursinus-cs174-s2022.github.io/CoursePage/">CS 174: Object Oriented And Systems Programming</a></h3></li>
