--- a/Research/GASPGroup/index.html
+++ b/Research/GASPGroup/index.html
@@ -124,10 +124,7 @@
 							<div class="row 200%">
 								<div class="4u 4u$(medium)">
 									<h3>Seraiah Kutai</h3>
-									<img src = "seraiah2.png" width="100%">
-									<p>
-										Also pictured: Matt Cole, <a href = "https://nscoville.github.io/website/">Dr. Nicholas Scoville</a>
-									</p>
+									<img src = "seraiah3.jpg" width="100%">
 	
 								</div>
 								<div class="4u 4u$(medium)">
@@ -156,7 +153,10 @@
 							<div class="row 200%">
 								<div class="4u 4u$(medium)">
 									<h3>Seraiah Kutai, Tom Boccuto</h3>
-									<img src = "SeraiahKutai.png" width="50%">
+									<img src = "seraiah2.png" width="100%">
+									<p>
+										Also pictured: Matt Cole, <a href = "https://nscoville.github.io/website/">Dr. Nicholas Scoville</a>
+									</p>
 	
 								</div>
 								<div class="4u 4u$(medium)">
