--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -43,6 +43,13 @@
 										<h1><a name = "classes">Classes</a></h1>
 									</header>
 
+									<h2>Spring 2023</h2>
+									<ul>
+										<li><h3><a href = "https://ursinus-cs174-s2023.github.io/CoursePage/">CS 174: Object Oriented And Systems Programming</a></h3></li>
+										<li><h3><a href = "https://ursinus-ids301-s2023.github.io/CoursePage/">IDS 301: Problem Solving And Analysis with Python</a></h3></li>
+										<li><h3><a href = "https://ursinus-cs372-s2023.github.io/CoursePage/">CS 372: Digital Music Processing</a></h3></li>
+									</ul>
+
 									<h2>Fall 2022</h2>
 									<ul>
 										<li><h3><a href = "https://ursinus-cs174-f2022.github.io/CoursePage/">CS 174: Object Oriented And Systems Programming</a></h3></li>
