--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -43,6 +43,13 @@
 										<h1><a name = "classes">Classes</a></h1>
 									</header>
 
+									<h2>Fall 2023</h2>
+									<ul>
+										<li><h3><a href = "https://ursinus-cs271-f2023.github.io/CoursePage/">CS 271: Algorithms And Data Structures</a></h3></li>
+										<li><h3><a href = "https://ursinus-cs373-f2023.github.io/CoursePage/">CS 373: Theory of Computation</a></h3></li>
+										<li><h3><a href = "https://ursinus-cs477-f2023.github.io/CoursePage/">CS 477: Artificial Intelligence And Machine Learning</a></h3></li>
+									</ul>
+
 									<h2>Spring 2023</h2>
 									<ul>
 										<li><h3><a href = "https://ursinus-cs174-s2023.github.io/CoursePage/">CS 174: Object Oriented And Systems Programming</a></h3></li>
