Stipple tunes link

--- a/Research/GASPGroup/index.html
+++ b/Research/GASPGroup/index.html
@@ -116,7 +116,7 @@
 								<div class="4u 4u$(medium)">
 									<h4>Traveling Salesperson Tunes And Stipple Tunes</h4>
 									<ul>
-										<li><a href = "https://ursinus-cs477-f2023.github.io/CoursePage/index.html#schedule">Abstract / Poster / Live demo</a></li>
+										<li><a href = "https://ctralie.github.io/StippleTunes/Viewer/">Abstract / Poster / Live demo</a></li>
 									</ul>
 								</div>
 							</div>
