Adding some of my newer research projects

--- a/Research/index.html
+++ b/Research/index.html
@@ -44,9 +44,108 @@
 										<h1>Research Projects</h1>
 									</header>
 									
-									Below are some selected academic projects I have worked on.  Please refer to my <a href = "ctralie_dissertation.pdf">dissertation</a> to see the spark of a lot of this work.
+									Below are some selected academic projects I have worked on.  Please refer to my <a href = "ctralie_dissertation.pdf">dissertation</a> to see the spark of a lot of this work, as well as my <a href = "https://scholar.google.com/citations?hl=en&user=Ka-p3u0AAAAJ&view_op=list_works&sortby=pubdate">Google scholar</a> for more recent publications.
+
+									<p></p><p></p><p></p>
+									<HR><h2>2023</h2>
+
+									<div class="row 200%">
+										<div class="6u 12u$(medium)">
+											<img src = "OtherPics/VincentOnion.png" width=300>
+										</div>
+										<div class="6u 12u$(medium)">
+													<h4><a href = "https://ctralie.github.io/GodzillaOnions/">Godzilla Onions: A Skit and Applet to Explain
+														Euclidean Half-Plane Fractional Cascading</a></b>.  Rich Berger, Vincent Ha, David Kratz, Michael Lin, Jeremy Moyer, <u><a href = "http://www.ctralie.com">Christopher J. Tralie</a></u><BR><a href = "https://apps.utdallas.edu/SOCG23/media.html">Symposium on Computational Geometry (SOCG) Multimedia</a></h4>
+													<ul>
+														<li><a href = "https://ctralie.github.io/GodzillaOnions/">Live demo / video</a></li>
+													<li>
+														<a href = "https://drops.dagstuhl.de/storage/00lipics/lipics-vol258-socg2023/LIPIcs.SoCG.2023.62/LIPIcs.SoCG.2023.62.pdf">Paper link</a>
+													</li>
+													</ul>
+										</div>
+									</div>
+									<p></p><p></p><p></p>
+
+
+									<div class="row 200%">
+										<div class="6u 12u$(medium)">
+											<img src = "OtherPics/StippleTunes.png" width=300>
+										</div>
+										<div class="6u 12u$(medium)">
+													<h4><a href = "https://ctralie.github.io/StippleTunes/Viewer/">Stipple Tunes</a></b>.  Alexa Lewis, <u><a href = "http://www.ctralie.com">Christopher J. Tralie</a></u><BR><a href = "https://www.evostar.org/2023/evomusart/">12th International Conference on Artificial Intelligence in Music, Sound, Art, And Design: Late Breaking Demo</a></h4>
+													<ul>
+														<li><a href = "https://ctralie.github.io/StippleTunes/Viewer/">Live demo</a></li>
+													<li>
+														<a href = "https://ctralie.github.io/StippleTunes/Viewer/writeup.pdf">Paper link</a>
+													</li>
+													<li>
+														<a href = "https://github.com/ctralie/StippleTunes">Source code</a>
+													</li>
+													<li>
+														<a href = "https://docs.google.com/presentation/d/1I5QpbbIGQrjE9Q8KsrOaGObQFmI17v81/edit?usp=drive_link&ouid=105746874925494337589&rtpof=true&sd=true">Slides</a>
+													</li>
+													</ul>
+										</div>
+									</div>
+									<p></p><p></p><p></p>
+
+									<div class="row 200%">
+										<div class="6u 12u$(medium)">
+											<img src = "OtherPics/audiocurve.png" width=300>
+										</div>
+										<div class="6u 12u$(medium)">
+													<h4><a href = "https://ctralie.github.io/AudioCurveSteganography/viewer/examples/">Artistic Curve Steganography Carried by Musical Audio</a></b>.  <u><a href = "http://www.ctralie.com">Christopher J. Tralie</a></u><BR><a href = "https://www.evostar.org/2023/evomusart/">Proceedings of the 12th International Conference on Artificial Intelligence in Music, Sound, Art, And Design</a></h4>
+													<ul>
+														<li><a href = "https://ctralie.github.io/AudioCurveSteganography/viewer/examples/">Live demo</a></li>
+													<li>
+														<a href = "https://arxiv.org/pdf/2301.12354.pdf">Paper link</a>
+													</li>
+													<li>
+														<a href = "https://github.com/ctralie/AudioCurveSteganography">Source code</a>
+													</li>
+													<li>
+														<a href = "https://docs.google.com/presentation/d/1b25JWgKJCL350-WBnhz7yUx95-41ers1/edit?usp=drive_link&ouid=105746874925494337589&rtpof=true&sd=true">Slides</a>
+													</li>
+													</ul>
+										</div>
+									</div>
+									<p></p><p></p><p></p>
+
+									<div class="row 200%">
+										<div class="6u 12u$(medium)">
+											<img src = "OtherPics/p53Nature.png" width=300>
+										</div>
+										<div class="6u 12u$(medium)">
+													<h4><a href = "https://par.nsf.gov/servlets/purl/10359673">Long-term p21 and p53 dynamics regulate the frequency of
+														mitosis events and cell cycle arrest following radiation damage</a></b>. <a href = "https://phongatran.github.io/">Anh Phong Tran</a>, <u><a href = "http://www.ctralie.com">Christopher J. Tralie</a></u>, <a href = "https://ssqbiophd.hms.harvard.edu/faculty-staff/jose-reyes">Jos&#233; Reyes</a>, <a href = "http://www.math.ucsd.edu/~cmoosmueller/index.html">Caroline Moosm&#252;ller</a>, <a href = "https://www2.le.ac.uk/departments/engineering/people/academic-staff/dr-zehor-belkhatir">Zehor Belkhatir</a>, <a href = "https://engineering.jhu.edu/chembe/faculty/yannis-kevrekidis/">Ioannis G. Kevrekidis</a>, <a href = "https://www.ias.edu/scholars/levine">Arnold J Levine</a>, <a href = "https://www.mskcc.org/research-areas/labs/joseph-deasy">Joseph O. Deasy</a>, <a href = "https://www.cs.stonybrook.edu/people/faculty/AllenTannenbaum">Allen R. Tannenbaum</a>.  <a href = "https://www.nature.com/cdd/">Nature Cell Death And Differentiation</a>. </h4>
+													<ul>
+													<li><a href = "https://par.nsf.gov/servlets/purl/10359673">Paper</a></li>
+													
+													</ul>
+										</div>
+									</div>
+									<p></p><p></p><p></p>
+
 									<p></p><p></p><p></p>
 									<HR><h2>2021</h2>
+
+									<div class="row 200%">
+										<div class="6u 12u$(medium)">
+											<img src = "OtherPics/IEEESignalProcessingMag.png" width=300>
+										</div>
+										<div class="6u 12u$(medium)">
+													<h4><a href = "https://arxiv.org/pdf/2109.02472.pdf">Audio-based musical version identification: Elements and challenges</a></b>.  <a href = "https://furkanyesiler.github.io/">Furkan Yesiler</a>, Guillaume Doras, <a href = "https://research.atspotify.com/2021/08/rachel-bittner-senior-research-scientist/">Rachel Bittner</a>, <u><a href = "http://www.ctralie.com">Christopher J. Tralie</a></u>, <a href = "https://joanserra.weebly.com/">Joan Serrà</a><BR><a href = "https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=79">IEEE Signal Processing Magazine</a></h4>
+													<ul>
+													<li>
+														<a href = "https://arxiv.org/pdf/2109.02472">Paper link</a>
+													</li>
+													<li>
+														<a href = "https://ursinus-cs472a-s2021.github.io/CoursePage/ClassExercises/Week13/version_examples/">Examples of versions</a> catalogued by Rachel Bittner
+													</li>
+													</ul>
+										</div>
+									</div>
+									<p></p><p></p><p></p>
 
 									<div class="row 200%">
 										<div class="6u 12u$(medium)">
