--- a/Software/index.html
+++ b/Software/index.html
@@ -48,6 +48,19 @@
 								</p>
 
 
+								<h2><a href = "https://github.com/scikit-tda/DREiMac/">DREiMac: Dimensionality Reduction with Eilenberg-MacLane Coordinates</a></h2>
+								<div class="row">
+									<div class="6u 12u$(medium)">
+										<img src = "Dreimac.png" width = 400 height = 200>
+									</div>
+									<div class="6u 12u$(medium)">
+										<p>
+										I worked with <a href = "https://www.joperea.com/">Jose Perea</a> and <a href = "https://luisscoccola.com/">Luis Scoccola</a> to create a library for nonlinear dimension reduction to topological spaces, including tori, projective planes, and lens spaces.  Please refer to our <a href = "https://joss.theoj.org/papers/10.21105/joss.05791.pdf">extended abstract</a> in the <a href = "https://joss.theoj.org/">Journal of Open Source Software (JOSS)</a> for more info.
+										</p>
+									</div>
+								</div>
+								<BR><HR>
+
 								<h2><a href = "https://github.com/scikit-tda/ripser.py">ripser.py</a></h2>
 								<div class="row">
 									<div class="6u 12u$(medium)">
@@ -55,7 +68,7 @@
 									</div>
 									<div class="6u 12u$(medium)">
 										<p>
-										I worked with <a href = "https://sauln.github.io/">Nathaniel Saul</a> and <a href = "https://math.duke.edu/people/rann-bar">Rann Bar-On</a> to create a user friendly Python interface to <a href = "http://ulrich-bauer.org/">Uli Bauer</a>'s <a href = "https://github.com/Ripser/ripser/">ripser</a> library for fast <a href = "https://en.wikipedia.org/wiki/Persistent_homology">persistent homology</a> computations.  We made this cross-platform and easy to install (<code>pip install ripser</code>), and we have <a href = "https://github.com/scikit-tda/ripser.py/tree/master/notebooks">a number of Python notebooks</a> showing usage and showcasing different applications of the software.  Please refer to our <a href = "https://www.theoj.org/joss-papers/joss.00925/10.21105.joss.00925.pdf">extended abstract</a>> in the <a href = "https://joss.theoj.org/">Journal of Open Source Software (JOSS)</a> for more info.
+										I worked with <a href = "https://sauln.github.io/">Nathaniel Saul</a> and <a href = "https://math.duke.edu/people/rann-bar">Rann Bar-On</a> to create a user friendly Python interface to <a href = "http://ulrich-bauer.org/">Uli Bauer</a>'s <a href = "https://github.com/Ripser/ripser/">ripser</a> library for fast <a href = "https://en.wikipedia.org/wiki/Persistent_homology">persistent homology</a> computations.  We made this cross-platform and easy to install (<code>pip install ripser</code>), and we have <a href = "https://github.com/scikit-tda/ripser.py/tree/master/notebooks">a number of Python notebooks</a> showing usage and showcasing different applications of the software.  Please refer to our <a href = "https://www.theoj.org/joss-papers/joss.00925/10.21105.joss.00925.pdf">extended abstract</a> in the <a href = "https://joss.theoj.org/">Journal of Open Source Software (JOSS)</a> for more info.
 										</p>
 									</div>
 								</div>
