Pre-tenure sabbatical

--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -45,6 +45,11 @@
 									<p>
 										<b>NOTE: </b> As a small liberal arts college, Ursinus generally caps classes at 25 students.
 									</p>
+									<h2>Spring 2023</h2>
+									<p>
+										I am on <a href = "https://www.ursinus.edu/offices/human-resources/employee-benefits/time-away-from-work/faculty-sabbatical-leave/">pre-tenure sabbatical leave</a> from teaching this spring, and I am mostly focused on research.  But I will be presenting <a href = "../VirtualCities">this assignment from CS 174</a> at <a href = "https://sigcse2024.sigcse.org/track/sigcse-ts-2024-nifty-assignments#event-overview">SIGCSE 2024</a> this spring.
+									</p>
+
 									<h2>Fall 2023</h2>
 									<ul>
 										<li><h3><a href = "https://ursinus-cs271-f2023.github.io/CoursePage/">CS 271: Algorithms And Data Structures</a> (30 Students)</h3>  </li>
