Basic audio waveform

--- a/Software/index.html
+++ b/Software/index.html
@@ -132,6 +132,18 @@
 											</p>
 										</div>
 									</div>
+
+									<h2><a href = "https://www.facejam.app/jsanov/waveforms.html">Basic Audio Waveform Generator</a></h2>
+									<div class="row">
+										<div class="6u 12u$(medium)">
+											<img src = "BasicAudio.png" width="100%">
+										</div>
+										<div class="6u 12u$(medium)">
+											<p>
+												I made a simple program in Javascript to generate basic audio waveforms from combinations of pure tones, which is useful in teaching, particularly for music teachers who don't have experience coding but who want to show some of the basic physics.
+											</p>
+										</div>
+									</div>
 									
 
 
