Linking to courses for this semester

--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -45,6 +45,14 @@
 									<p>
 										<b>NOTE: </b> As a small liberal arts college, Ursinus generally caps classes at 25 students.
 									</p>
+
+									<h2>Fall 2023</h2>
+									<ul>
+										<li><h3><a href = "https://ursinusdatastructures.github.io/F2024/">CS 271: Algorithms And Data Structures</a> (20 Students)</h3>  </li>
+										<li><h3><a href = "https://ursinusgraphics.github.io/F2024/">CS 476: Computer Graphics</a> (24 Students)</h3></li>
+										<li><h3><a href = "https://ursinus-cie100j-f2024.github.io/CoursePage/">CIE 100: Common Intellectual Experience I</a> (17 Students)</h3></li>
+									</ul>
+
 									<h2>Spring 2023</h2>
 									<p>
 										I am on <a href = "https://www.ursinus.edu/offices/human-resources/employee-benefits/time-away-from-work/faculty-sabbatical-leave/">pre-tenure sabbatical leave</a> from teaching this spring, and I am mostly focused on research.  But I will be presenting <a href = "../VirtualCities">this assignment from CS 174</a> at <a href = "https://sigcse2024.sigcse.org/track/sigcse-ts-2024-nifty-assignments#event-overview">SIGCSE 2024</a> this spring.
